GNOME Bugzilla – Bug 768581
Show a placeholder if an app is missing screenshots
Last modified: 2016-07-13 08:31:23 UTC
Created attachment 331094 [details] screenshot of current state and a mockup for what it could look like If an app doesn't have any screenshots, the details page looks rather odd and has a poor layout. It would probably be better to show a placeholder instead of the screenshot, in order to prevent this.
commit dff34ddc2ece929c7e46dc92c3031935a9e4f845 Author: Richard Hughes <richard@hughsie.com> Date: Tue Jul 12 20:02:26 2016 +0100 Show a placeholder when an application has no screenshots Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=768581