Show a placeholder when an application has no screenshots

Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=768581